--- a/PopularMovies/app/src/main/res/values/strings.xml
+++ b/PopularMovies/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
   <string name="sortBy_popularMovies">Popular Movies</string>
   <string name="sortBy_top_rated_Movies">Top Rated Movies</string>
   <string name="Movie_details">Movie Details</string>
+  <string name="no_internet_connection">No Internet Connection</string>
+  <string name="no_movies">No Movies found.</string>
 </resources>
