--- a/PopularMovies/app/src/main/res/values/strings.xml
+++ b/PopularMovies/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
   <string name="id">id</string>
   <string name="Failed_to_insert_data">Failed to insert data into</string>
   <string name="Unknown_URI">Unknown URI:</string>
+  <string name="API_KEY">AIzaSyCApU76omffWISxSNxOf_lv_hMliaLUdyQ</string>
 </resources>
